alignment fix

--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -230,6 +230,7 @@
 .desc {
   margin-top: 1rem;
   margin-bottom: 1rem;
+  text-align: left;
 }
 
 .links {
